--- a/Pages/Aluno/registrarAluno.html
+++ b/Pages/Aluno/registrarAluno.html
@@ -237,7 +237,7 @@ $('#btnCadastrar').click(function () {
     headers: {
       'Content-Type': 'application/json'
     },
-    data : JSON.stringify(data),
+    data : JSON.stringify(data)
   });
 
   request.success(function(resp) {
