--- a/index.html
+++ b/index.html
@@ -85,36 +85,14 @@
   <!-- Bootstrap core JavaScript-->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="js/crowfunding/loginUsuario.js"></script>
   <!-- Core plugin JavaScript-->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Logos -->
   <script src="js/logos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
-
+ 
 </body>
 
 </html>
-
-<script>
-
-$('#btnLogin').click(function () {
-  event.preventDefault();
-  let tipoUsuario = $("#inputTipoUser option:selected").text();
-  
-  if(tipoUsuario=="Instituição"){
-    console.log("i");
-  }else if(tipoUsuario=="Aluno"){
-    console.log("a");
-  }
-
-
-
-
-});
-
-
-
-
-</script>
