--- a/Pages/Aluno/indexAluno.html
+++ b/Pages/Aluno/indexAluno.html
@@ -95,7 +95,7 @@
           </li>
         </ol>
 <div class="text-center">
-<h1 class="display-4">Bem Vindo - Acesso Instituição</h1>
+<h1 class="display-4">Bem Vindo - Acesso Aluno</h1>
 </div>
 
 
