Refatoração do Codigo

--- a/Pages/Aluno/indexAluno.html
+++ b/Pages/Aluno/indexAluno.html
@@ -59,25 +59,25 @@
     <ul class="sidebar navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="/Pages/Instituicao/cursos.html">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
+          <i class="fas fa-fw fa-home"></i>
           <span>Inicio</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/Pages/Instituicao/cursos.html">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
+          <i class="fas fa-fw fa-archive"></i>
           <span>Cursos</span>
         </a>
       </li>
       <li class="nav-item">
           <a class="nav-link" href="index.html">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <i class="fas fa-fw fa-list"></i>
             <span>Alunos</span>
           </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="index.html">
-              <i class="fas fa-fw fa-tachometer-alt"></i>
+              <i class="fas fa-fw fa-business-time"></i>
               <span>Filiais</span>
             </a>
           </li>
@@ -159,6 +159,7 @@
   <!-- Demo scripts for this page-->
   <script src="../../js/demo/datatables-demo.js"></script>
   <script src="../../js/demo/chart-area-demo.js"></script>
+
 
 </body>
 
