--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <body class="bg-dark">
 
 <div class="container-fluid">
+
+  <div class="row align-items-center">
+<div class="col-md-6">
     <div class="card card-login mx-auto mt-5">
         <div class="card-header corFundoLoginHeader text-center">Faça seu login</div>
         <div class="card-body corFundoLoginBody">
@@ -61,6 +64,16 @@
           </div>
         </div>
       </div>
+</div>
+<div class="col-md-6">
+    <div class="mx-auto mt-5">
+        <a style="height: 10rem;display: flex;align-items: center;justify-content: center;" class="btn btn-primary btn-lg btn-block" id="btnLogin" href="index.html"><p class="display-4">DOE</p></a>
+        </div>
+  </div>
+
+  </div>
+
+
 
       <!-- Inicio logos-->
 
