--- a/Pages/Instituicao/alunos.html
+++ b/Pages/Instituicao/alunos.html
@@ -266,8 +266,8 @@
                     <td>10/12/2019</td>
                     <td>10/01/2020</td>
                     <td>Aguardando aprovação</td>
-                    <td><button type="button" class="btn btn-primary" data-toggle="modal"
-                        data-target=".bd-example-modal-lg">Modificar</button></td>
+                    <td><button type="button" class="btn btn-success">Aprovar</button>
+                        <button type="button" class="btn btn-danger">Reprovar</button></td>
                   </tr>
                 </tbody>
               </table>
