--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </div>
 <div class="col-md-6">
     <div class="mx-auto mt-5">
-        <a style="height: 10rem;display: flex;align-items: center;justify-content: center;" class="btn btn-primary btn-lg btn-block" id="btnLogin" href="index.html"><p class="display-4">DOE</p></a>
+        <a style="height: 10rem;display: flex;align-items: center;justify-content: center;" class="btn btn-primary btn-lg btn-block" id="btnLogin" href="Pages/Doador/indexDoador.html"><p class="display-4">DOE</p></a>
         </div>
   </div>
 
