--- a/Pages/Doador/cursos.html
+++ b/Pages/Doador/cursos.html
@@ -26,14 +26,14 @@
 
   <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
-    <a class="navbar-brand mr-1" href="index.html">CrowFunding</a>
+    <a class="navbar-brand mr-1" href="indexDoador.html">CrowFunding</a>
 
     <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
       <i class="fas fa-bars"></i>
     </button>
 
 <div class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0 text-white bolder text-center">
-  Instituição
+  Doador
 </div>
 
     <!-- Navbar -->
@@ -58,30 +58,17 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/Pages/Instituicao/cursos.html">
-          <i class="fas fa-fw fa-home"></i>
-          <span>Inicio</span>
+        <a class="nav-link" href="pessoas.html">
+          <i class="fas fa-fw fa-user"></i>
+          <span>Pessoas</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Pages/Instituicao/cursos.html">
-          <i class="fas fa-fw fa-archive"></i>
+        <a class="nav-link" href="cursos.html">
+          <i class="fas fa-fw fa-list"></i>
           <span>Cursos</span>
         </a>
       </li>
-      <li class="nav-item">
-          <a class="nav-link" href="index.html">
-            <i class="fas fa-fw fa-list"></i>
-            <span>Alunos</span>
-          </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <i class="fas fa-fw fa-business-time"></i>
-              <span>Filiais</span>
-            </a>
-          </li>
-
     </ul>
 
     <div id="content-wrapper">
@@ -97,6 +84,64 @@
 <div class="text-center">
 <h1 class="display-4">Bem Vindo - Acesso Aluno</h1>
 </div>
+
+<div>
+  <form>
+    <select>
+      <option>Excel Avançado</option>
+    </select>
+    <button>Filtrar</button>
+  </form>
+</div>
+
+<div class="card mb-3">
+    <div class="card-header">
+      <i class="fas fa-table"></i>
+      Alunos com solicitação em aberto</div>
+    <div class="card-body">
+      <div class="table-responsive">
+        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+          <thead>
+            <tr>
+              <th>Nome do Aluno</th>
+              <th>Nome do Curso</th>
+              <th>Hora Início</th>
+              <th>Hora Término</th>
+              <th>Data Início</th>
+              <th>Data Prev. Término</th>
+              <th>Status</th>
+              <th>Ações</th>
+            </tr>
+          </thead>
+          <tfoot>
+            <tr>
+              <th>Nome do Aluno</th>
+              <th>Nome do Curso</th>
+              <th>Hora Início</th>
+              <th>Hora Término</th>
+              <th>Data Início</th>
+              <th>Data Prev. Término</th>
+              <th>Status</th>
+              <th>Ações</th>
+            </tr>
+          </tfoot>
+          <tbody>
+            <tr>
+              <td>Pedro Joaquim da Silva</td>
+              <td>Excel Avançado</td>
+              <td>08:00 PM</td>
+              <td>10:00 PM</td>
+              <td>10/12/2019</td>
+              <td>10/01/2020</td>
+              <td>Aguardando aprovação</td>
+              <td><button class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl">Lista de alunos</button>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+  </div>
 
 
       </div>
@@ -135,11 +180,69 @@
         <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="../../index.html">Logout</a>
+          <a class="btn btn-primary" href="login.html">Logout</a>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- Modal extra grande -->
+
+
+<div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+        <div class="card mb-3">
+            <div class="card-header">
+              <i class="fas fa-table"></i>
+              Alunos com solicitação em aberto</div>
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                  <thead>
+                    <tr>
+                      <th>Nome do Aluno</th>
+                      <th>Nome do Curso</th>
+                      <th>Hora Início</th>
+                      <th>Hora Término</th>
+                      <th>Data Início</th>
+                      <th>Data Prev. Término</th>
+                      <th>Status</th>
+                      <th>Ações</th>
+                    </tr>
+                  </thead>
+                  <tfoot>
+                    <tr>
+                      <th>Nome do Aluno</th>
+                      <th>Nome do Curso</th>
+                      <th>Hora Início</th>
+                      <th>Hora Término</th>
+                      <th>Data Início</th>
+                      <th>Data Prev. Término</th>
+                      <th>Status</th>
+                      <th>Ações</th>
+                    </tr>
+                  </tfoot>
+                  <tbody>
+                    <tr>
+                      <td>Pedro Joaquim da Silva</td>
+                      <td>Excel Avançado</td>
+                      <td>08:00 PM</td>
+                      <td>10:00 PM</td>
+                      <td>10/12/2019</td>
+                      <td>10/01/2020</td>
+                      <td>Aguardando aprovação</td>
+                      <td><button class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl">Lista de alunos</button>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+          </div>
+    </div>
+  </div>
+</div>
 
   <!-- Bootstrap core JavaScript-->
   <script src="../../vendor/jquery/jquery.min.js"></script>
