--- a/Pages/Doador/indexDoador.html
+++ b/Pages/Doador/indexDoador.html
@@ -26,14 +26,14 @@
 
   <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
-    <a class="navbar-brand mr-1" href="index.html">CrowFunding</a>
+    <a class="navbar-brand mr-1" href="indexDoador.html">CrowFunding</a>
 
     <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
       <i class="fas fa-bars"></i>
     </button>
 
 <div class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0 text-white bolder text-center">
-  Instituição
+  Doador
 </div>
 
     <!-- Navbar -->
@@ -58,30 +58,17 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/Pages/Instituicao/cursos.html">
-          <i class="fas fa-fw fa-home"></i>
-          <span>Inicio</span>
+        <a class="nav-link" href="pessoas.html">
+          <i class="fas fa-fw fa-user"></i>
+          <span>Pessoas</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Pages/Instituicao/cursos.html">
-          <i class="fas fa-fw fa-archive"></i>
+        <a class="nav-link" href="cursos.html">
+          <i class="fas fa-fw fa-list"></i>
           <span>Cursos</span>
         </a>
       </li>
-      <li class="nav-item">
-          <a class="nav-link" href="index.html">
-            <i class="fas fa-fw fa-list"></i>
-            <span>Alunos</span>
-          </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <i class="fas fa-fw fa-business-time"></i>
-              <span>Filiais</span>
-            </a>
-          </li>
-
     </ul>
 
     <div id="content-wrapper">
@@ -95,7 +82,23 @@
           </li>
         </ol>
 <div class="text-center">
-<h1 class="display-4">Bem Vindo - Acesso Aluno</h1>
+<h1 class="display-4">Bem Vindo - Acesso do Doador</h1>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <h1 class="display-4 text-center">Localize por:</h1>
+  </div>
+  <div class="col-md-6">
+    <div class="mx-auto mt-5">
+      <a style="height: 10rem;display: flex;align-items: center;justify-content: center;" class="btn btn-primary btn-lg btn-block" id="btnLogin" href="pessoas.html"><p class="display-4">PESSOAS</p></a>
+      </div>
+  </div>
+  <div class="col-md-6">
+    <div class="mx-auto mt-5">
+      <a style="height: 10rem;display: flex;align-items: center;justify-content: center;" class="btn btn-primary btn-lg btn-block" id="btnLogin" href="cursos.html"><p class="display-4">CURSOS</p></a>
+      </div>
+  </div>
 </div>
 
 
