--- a/Pages/Doador/teste.html
+++ b/Pages/Doador/teste.html
@@ -26,21 +26,22 @@
 
   <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
-    <a class="navbar-brand mr-1" href="index.html">CrowFunding</a>
+    <a class="navbar-brand mr-1" href="indexDoador.html">CrowFunding</a>
 
     <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
       <i class="fas fa-bars"></i>
     </button>
 
-<div class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0 text-white bolder text-center">
-  Instituição
-</div>
+    <div class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0 text-white bolder text-center">
+      Doador
+    </div>
 
     <!-- Navbar -->
     <ul class="navbar-nav ml-auto ml-md-0">
-      
+
       <li class="nav-item dropdown no-arrow">
-        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-user-circle fa-fw"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
@@ -58,30 +59,17 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/Pages/Instituicao/cursos.html">
-          <i class="fas fa-fw fa-home"></i>
-          <span>Inicio</span>
+        <a class="nav-link" href="pessoas.html">
+          <i class="fas fa-fw fa-user"></i>
+          <span>Pessoas</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Pages/Instituicao/cursos.html">
-          <i class="fas fa-fw fa-archive"></i>
+        <a class="nav-link" href="cursos.html">
+          <i class="fas fa-fw fa-list"></i>
           <span>Cursos</span>
         </a>
       </li>
-      <li class="nav-item">
-          <a class="nav-link" href="index.html">
-            <i class="fas fa-fw fa-list"></i>
-            <span>Alunos</span>
-          </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <i class="fas fa-fw fa-business-time"></i>
-              <span>Filiais</span>
-            </a>
-          </li>
-
     </ul>
 
     <div id="content-wrapper">
@@ -94,9 +82,31 @@
             <a href="#">Inicio</a>
           </li>
         </ol>
-<div class="text-center">
-<h1 class="display-4">Bem Vindo - Acesso Aluno</h1>
-</div>
+        <div class="text-center">
+          <h1 class="display-4">Bem Vindo - Acesso Aluno</h1>
+        </div>
+
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <h2> <span>Nome: </span> <span id="nomeAluno"></span> </h2>
+              </div>
+              <div class="col">
+                  <h2> <span>Idade: </span> <span id="idade"></span> </h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                1 de 3
+              </div>
+              <div class="col">
+                2 de 3
+              </div>
+              <div class="col">
+                3 de 3
+              </div>
+            </div>
+          </div>
 
 
       </div>
@@ -123,7 +133,8 @@
   </a>
 
   <!-- Logout Modal-->
-  <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -135,11 +146,14 @@
         <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="../../index.html">Logout</a>
+          <a class="btn btn-primary" href="login.html">Logout</a>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- Modal extra grande -->
+
 
   <!-- Bootstrap core JavaScript-->
   <script src="../../vendor/jquery/jquery.min.js"></script>
@@ -160,6 +174,13 @@
   <script src="../../js/demo/datatables-demo.js"></script>
   <script src="../../js/demo/chart-area-demo.js"></script>
 
+
+<script>
+
+$(document).ready(function(){
+  $('#nomeAluno').html('asdkjnasodjsoij');
+})
+</script>
 
 </body>
 
