--- a/Pages/Aluno/meusCursos.html
+++ b/Pages/Aluno/meusCursos.html
@@ -14,7 +14,7 @@
   <!-- Custom fonts for this template-->
   <link href="../../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 
-  <!-- Page level plugin CSS--> 
+  <!-- Page level plugin CSS-->
   <link href="../../vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
 
   <!-- Custom styles for this template-->
@@ -44,7 +44,7 @@
           <i class="fas fa-user-circle fa-fw"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-          <!-- <a class="dropdown-item" href="#">Meu dados</a>
+          <!--<a class="dropdown-item" href="#">Meu dados</a>
           <div class="dropdown-divider"></div>-->
           <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
         </div>
@@ -58,7 +58,7 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/Pages/Aluno/indexAluno.html">
+        <a class="nav-link" href="/Pages/Aluno/.html">
           <i class="fas fa-fw fa-home"></i>
           <span>Inicio</span>
         </a>
@@ -88,84 +88,75 @@
           </li>
         </ol>-->
 <div class="text-center">
-<h1 class="display-4">Bem Vindo</h1>
+<h1 class="display-4">Meus Cursos</h1>
 </div>
 
 <div class="card mb-3">
   <div class="card-header">
     <i class="fas fa-table"></i>
-    Meus Dados</div>
+    Cursos</div>
   <div class="card-body">
-    <div class="row">
-      <div class="col">
-        <h4> <span>Nome do Aluno:</span> <span id="nomeAluno"></span> </h4>
-      </div>
-      <div class="col">
-        <h4> <span>CPF:</span> <span id="cpf"></span> </h4>
-      </div>
-      <div class="col">
-        <h4> <span>Data de Nascimento:</span> <span id="dataNascimento"></span> </h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4> <span>Telefone:</span> <span id="telefone"></span> </h4>
-      </div>
-      <div class="col">
-        <h4> <span>Email:</span> <span id="email"></span> </h4>
-      </div>
-      <div class="col">
-        <h4> <span>Renda per capta:<span> <span id="renda"></span> </h4>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col">
-          <h4> <span>Descrição do perfil:</span>  </h4>
-          <span id="descricao"></span>
-        </div>
-      </div>
-  </div>
-  </div>
-  <div class="card mb-3">
-    <div class="card-header">
-      <i class="fas fa-table"></i>
-      Dados de Moradia </div>
-    <div class="card-body">
-      <div class="row">
-        <div class="col">
-          <h4> <span>Rua:</span> <span id="rua"></span> </h4>
-        </div>
-        <div class="col">
-          <h4> <span>Numero:</span> <span id="numero"></span> </h4>
-        </div>
-        <div class="col">
-          <h4> <span>Complemento:</span> <span id="complemento"></span> </h4>
-        </div>
-      </div>
-    </div>
-    <div class="card-body">
-      <div class="row">
-        <div class="col">
-          <h4> <span>Bairro:</span> <span id="bairro"></span> </h4>
-        </div>
-        <div class="col">
-          <h4> <span>Cidade:</span> <span id="cidade"></span> </h4>
-        </div>
-      </div>
+    <div class="table-responsive">
+      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+        <thead>
+          <tr>
+            <th>Nome do Curso</th>
+            <th>Instituição</th>
+            <th>Status</th>
+            <th>Mais informações</th>
+          </tr>
+        </thead>
+        </tfoot>
+        <tbody>
+          <tr>
+            <td>...........</td>
+            <td>...........</td>
+            <td>..........</td>
+            <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">+</button></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
   <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
 </div>
 <!-- Modal grande -->
-
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      ...
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <h4> <span>Nome do Curso:</span> <span id="nomeCurso"></span> </h4>
+              </div>
+              <div class="col">
+                <h4> <span>Nome da Instituição:</span> <span id="nomeInstituicao"></span> </h4>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <h4> <span>Hora de Inicio:</span> <span id="horaInicio"></span> </h4>
+              </div>
+              <div class="col">
+                <h4> <span>Hora de Termino:</span> <span id="horaTermino"></span> </h4>
+              </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                  <h4> <span>Data de Inicio:<span> <span id="dataInicio"></span> </h4>
+                </div>
+                <div class="col">
+                  <h4> <span>Data de Termino:</span> <span id="dataTermino"></span> </h4>
+                </div>
+              </div>
+              <div class="text-center">
+                <h4> <span> Ementa </span> </h4>
+                <span id="Ementa"></span>
+                </div>
+          </div>
+      </div>
     </div>
   </div>
-</div>
-
 
       </div>
       <!-- /.container-fluid -->
