--- a/Pages/Aluno/indexAluno.html
+++ b/Pages/Aluno/indexAluno.html
@@ -58,13 +58,13 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/Pages/Aluno/indexAluno.html">
+        <a class="nav-link" href="indexAluno.html">
           <i class="fas fa-fw fa-home"></i>
           <span>Inicio</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Pages/Aluno/meusCursos.html">
+        <a class="nav-link" href="meusCursos.html">
           <i class="fas fa-fw fa-archive"></i>
           <span>Meus Cursos</span>
         </a>
