--- a/Pages/Instituicao/indexInstituicao.html
+++ b/Pages/Instituicao/indexInstituicao.html
@@ -58,13 +58,13 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/Pages/Instituicao/cursos.html">
+        <a class="nav-link" href="cursos.html">
           <i class="fas fa-fw fa-home"></i>
           <span>Inicio</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Pages/Instituicao/cursos.html">
+        <a class="nav-link" href="cursos.html">
           <i class="fas fa-fw fa-archive"></i>
           <span>Cursos</span>
         </a>
