--- a/Pages/Doador/indexDoador.html
+++ b/Pages/Doador/indexDoador.html
@@ -28,11 +28,7 @@
 
     <a class="navbar-brand mr-1" href="indexDoador.html">CrowFunding</a>
 
-    <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
-      <i class="fas fa-bars"></i>
-    </button>
-
-<div class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0 text-white bolder text-center">
+    <div class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0 text-white bolder text-center">
   Doador
 </div>
 
@@ -44,9 +40,7 @@
           <i class="fas fa-user-circle fa-fw"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-          <a class="dropdown-item" href="#">Meu dados</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
+          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Sair</a>
         </div>
       </li>
     </ul>
@@ -59,14 +53,8 @@
     <ul class="sidebar navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="pessoas.html">
-          <i class="fas fa-fw fa-user"></i>
-          <span>Pessoas</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="cursos.html">
           <i class="fas fa-fw fa-list"></i>
-          <span>Cursos</span>
+          <span>Lista de Pessoas</span>
         </a>
       </li>
     </ul>
@@ -75,30 +63,57 @@
 
       <div class="container-fluid">
 
-        <!-- Breadcrumbs-->
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item active">
-            <a href="#">Inicio</a>
-          </li>
-        </ol>
 <div class="text-center">
-<h1 class="display-4">Bem Vindo - Acesso do Doador</h1>
+<h1>Bem Vindo - Acesso do Doador</h1>
 </div>
 
-<div class="row">
-  <div class="col-md-12">
-    <h1 class="display-4 text-center">Localize por:</h1>
+<div class="card mb-3">
+  <div class="card-header">
+    <i class="fas fa-user"></i>
+    Alunos com aguardando doações</div>
+  <div class="card-body">
+    <div class="table-responsive">
+      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+        <thead>
+          <tr>
+              <th>ID</th>
+            <th>Nome do Aluno</th>
+            <th>Nome do Curso</th>
+            <th>Instituição</th>
+            <th>Ações</th>
+          </tr>
+        </thead>
+        <tfoot>
+          <tr>
+              <th>ID</th>
+            <th>Nome do Aluno</th>
+            <th>Nome do Curso</th>
+            <th>Instituição</th>
+            <th>Ações</th>
+          </tr>
+        </tfoot>
+        <tbody>
+          <tr>
+            <td>2</td>
+            <td>Pedro Joaquim da Silva</td>
+            <td>Excel Avançado</td>
+            <td>PUC Minas</td>
+            <td><button type="button" class="btn text-center btn-primary" data-toggle="modal"
+                data-target=".bd-example-modal-lg">Doar agora</button></td>
+          </tr>
+          <tr>
+              <td>3</td>
+              <td>Maria Joaquim da Silva</td>
+              <td>Excel Avançado</td>
+              <td>Una</td>
+              <td><button type="button" class="btn text-center btn-primary" data-toggle="modal"
+                  data-target=".bd-example-modal-lg">Doar agora</button></td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
-  <div class="col-md-6">
-    <div class="mx-auto mt-5">
-      <a style="height: 10rem;display: flex;align-items: center;justify-content: center;" class="btn btn-primary btn-lg btn-block" id="btnLogin" href="pessoas.html"><p class="display-4">PESSOAS</p></a>
-      </div>
-  </div>
-  <div class="col-md-6">
-    <div class="mx-auto mt-5">
-      <a style="height: 10rem;display: flex;align-items: center;justify-content: center;" class="btn btn-primary btn-lg btn-block" id="btnLogin" href="cursos.html"><p class="display-4">CURSOS</p></a>
-      </div>
-  </div>
+  <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
 </div>
 
 
@@ -163,6 +178,48 @@
   <script src="../../js/demo/datatables-demo.js"></script>
   <script src="../../js/demo/chart-area-demo.js"></script>
 
+  <!-- Configuração do DataTable -->
+
+  <script>
+    $(document).ready(function () {
+        var table = $('#dataTable').DataTable({
+            "lengthMenu": [[10, 20, 25, 50, 100, -1], [10, 20, 25, 50, 100, "Todos"]],
+            "language": {
+                "sEmptyTable": "Nenhum jovem encontrado",
+                "sInfo": "Mostrando de _START_ até _END_ de _TOTAL_ jovens",
+                "sInfoEmpty": "Mostrando 0 até 0 de 0 jovens",
+                "sInfoFiltered": "(Filtrados de _MAX_ jovens)",
+                "sInfoPostFix": "",
+                "sInfoThousands": ".",
+                "sLengthMenu": "Exibir _MENU_ resultados por página",
+                "sLoadingRecords": "Carregando...",
+                "sProcessing": "Processando...",
+                "sZeroRecords": "Nenhum jovem encontrado",
+                "sSearch": "<b>Pesquisar nos resultados:</b>",
+                "oPaginate": {
+                    "sNext": "Próximo",
+                    "sPrevious": "Anterior",
+                    "sFirst": "Primeiro",
+                    "sLast": "Último"
+                },
+                "oAria": {
+                    "sSortAscending": ": Ordenar colunas de forma ascendente",
+                    "sSortDescending": ": Ordenar colunas de forma descendente"
+                },
+                buttons: {
+                    colvis: 'Exibir/Ocultar'
+                }
+            },
+            "order": [[2, 'asc']],
+            colReorder: true,
+            stateSave: true,
+            dom: '<"row"<"col-sm-2"B><"col-sm-5"l>f>t<"row text-left"<"col-sm-5"i><"col-sm-6"p>r>',
+            buttons: [{
+                extend: 'colvis'
+            }]
+        });
+    });
+</script>
 
 </body>
 
