--- a/Pages/Aluno/meusCursos.html
+++ b/Pages/Aluno/meusCursos.html
@@ -70,7 +70,7 @@
         </a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="   ">
+          <a class="nav-link" href="cadastroCursoAluno.html">
             <i class="fas fa-fw fa-list"></i>
             <span>Matricular</span>
           </a>
